infra/k8s/base/argocd/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  labels:
    team: shared
spec:
  parentRefs:
    - name: argocd
  hostnames:
    - "qoomlee-argocd.anuchito.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
